--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.App-header a {
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+}
